[tool.poetry]
name = "lisatools"
version = "0.0.1"
description = "Tools for monitoring my Lifetime ISA portfolio."
authors = ["Istvan Kleijn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
